# PickEngine

./: CMakeLists.txt  Camera.h  GameObject.h  PickPhysics.h  README copy.md  README.md  UI.h  UI_deprecated.h  camera.h  font.h  gameObject.h  glad.c  glad.h  gvd.h  input.h  light.h  main.cpp  objProcessor.h  pickPhysics.h  renderer.h  saveData.h  shader.h  textureSetup.h  time.h  userInterface.h  userScript.cpp  viewScript.cpp
Engine/: audioPlayer.cpp  audioPlayer.h  camera.cpp  camera.h  gameObject.cpp  gameObject.h  pickPhysics.cpp  pickPhysics.h  renderer.cpp  renderer.h  shader.cpp  shader.h
Events/: input.cpp  input.h  time.cpp  time.h
Tools/: objProcessor.h  saveData.cpp  saveData.h  userInterface.h
assets/: defaultCubeArray.h
examples/: savefile
shaders/: gizmoShader.fs  gizmoShader.vs  mainShader.fs  mainShader.vs  sunShader.fs  sunShader.vs
user-scripts/: gameObjectCreation.cpp  userScript.cpp  viewScript.cpp
